--- a/themes/tivi/css/bootstrap.non-responsive.css
+++ b/themes/tivi/css/bootstrap.non-responsive.css
@@ -75,14 +75,6 @@ html {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-body {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 13px;
-    line-height: 1.42857143;
-    color: #333333;
-    background-color: #ffffff;
-}
-
 input, button, select, textarea {
     font-family: inherit;
     font-size: inherit;
@@ -2804,7 +2796,7 @@ textarea.input-group-sm>.form-control, textarea.input-group-sm>.input-group-addo
 
 .nav>li>a:hover, .nav>li>a:focus {
     text-decoration: none;
-    background-color: #eeeeee;
+    /* background-color: #eeeeee; */
 }
 
 .nav>li.disabled>a {
