--- a/themes/tivi/css/bootstrap.non-responsive.css
+++ b/themes/tivi/css/bootstrap.non-responsive.css
@@ -7708,7 +7708,7 @@ li.hide-title>a {
     position: absolute;
     width: 100%;
     max-height: 100%;
-    bottom: 0;
+    bottom: 30px;
     padding-left: 1.5em;
     padding-right: 1.5em
 }
