--- a/themes/tivi/css/bootstrap.non-responsive.css
+++ b/themes/tivi/css/bootstrap.non-responsive.css
@@ -6420,7 +6420,7 @@ body.boxed .is-sticky-section {
 }
 
 .section {
-    padding: 30px 0;
+    padding-bottom: 10px;
     position: relative;
     min-height: auto;
     width: 100%;
@@ -7576,7 +7576,7 @@ li.hide-title>a {
 }
 
 .box-text {
-    padding-top: .7em;
+    padding-top: -2.7em;
     padding-bottom: 1.4em;
     position: relative;
     width: 100%;
@@ -7708,9 +7708,9 @@ li.hide-title>a {
     position: absolute;
     width: 100%;
     max-height: 100%;
-    bottom: 30px;
+    bottom: 0;
     padding-left: 1.5em;
-    padding-right: 1.5em
+    padding-right: 1.5em;
 }
 
 .box-overlay.dark .box-text,
