--- a/themes/tivi/css/bootstrap.non-responsive.css
+++ b/themes/tivi/css/bootstrap.non-responsive.css
@@ -7576,7 +7576,7 @@ li.hide-title>a {
 }
 
 .box-text {
-    padding-top: -2.7em;
+    padding-top: .7em;
     padding-bottom: 1.4em;
     position: relative;
     width: 100%;
