--- a/themes/mobile_default/css/style.css
+++ b/themes/mobile_default/css/style.css
@@ -284,20 +284,20 @@
     height: 47px;
     text-align: center;
     line-height: 47px;
-    color: #fff;
+    color: #db2626;
     background: transparent;
-    background-image: linear-gradient(to bottom,
+    /* background-image: linear-gradient(to bottom,
             rgba(0, 0, 0, 0) 0,
             rgba(0, 0, 0, 0.2) 100%);
     border-radius: 3px;
-    -webkit-border-radius: 3px;
+    -webkit-border-radius: 3px; */
 }
 
 .mbt:hover,
 .active .mbt,
 .mbt-lg:hover,
 .active .mbt-lg {
-    color: #fff;
+    color: #db2626;
     background-image: linear-gradient(to bottom,
             rgba(0, 0, 0, 0.1) 0,
             rgba(0, 0, 0, 0.3) 100%);
@@ -791,7 +791,7 @@ header.header-up {
     top: -50px;
 }
 #logo {
-    width: 200px;    
+    width: 150px;
 }
 
 #header .site-buttons {
@@ -915,11 +915,11 @@ header.header-up {
     right: 0;
     float: right;
     z-index: 9;
-    width: 319px;
+    width: 200px;
     min-height: 50px;
     overflow-y: auto;
     overflow-x: hidden;
-    padding: 10px 14px 20px 10px;
+    padding: 5px;
     background: #eee;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     display: none;
