--- a/themes/mobile_default/css/tivi.css
+++ b/themes/mobile_default/css/tivi.css
@@ -9385,3 +9385,18 @@ li.wc-layered-nav-rating .star-rating {
     position: relative;
     align-items: center;
 }
+
+header .header-fixed {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    z-index: 101;
+    color: #FFF;
+    background-color: rgb(29, 29, 27);
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.7)
+}
+
+main {
+    margin-top: 50px;
+}
