--- a/themes/mobile_default/css/news.css
+++ b/themes/mobile_default/css/news.css
@@ -95,11 +95,11 @@ div.news_column p.adminlink {
 ul.related {
     float: left;
     padding: 0;
-    margin: 0px;
+    margin: 15px 0 0;
 }
 
 div.news_column ul.related li {
-    padding: 0 4px 10px 0;
+    padding: 0 4px 2px 0;
 }
 
 div.news_column {
